add tocs for all aws files + update workflow

--- a/AWS/AWS Developer Associate/02_EC2.md
+++ b/AWS/AWS Developer Associate/02_EC2.md
@@ -2,6 +2,20 @@
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 **Table of Contents**
 
+- [EC2](#ec2)
+  - [Sizing & configuration options](#sizing--configuration-options)
+  - [User Data](#user-data)
+  - [Instance Types](#instance-types)
+  - [EC2 Instances Purchasing Options](#ec2-instances-purchasing-options)
+    - [EC2 on Demand](#ec2-on-demand)
+    - [EC2 Reserved Instances](#ec2-reserved-instances)
+    - [EC2 Savings Plans](#ec2-savings-plans)
+    - [EC2 Spot Instances](#ec2-spot-instances)
+    - [EC2 Dedicated Hosts](#ec2-dedicated-hosts)
+    - [EC2 Dedicated Instances](#ec2-dedicated-instances)
+    - [EC2 Capacity Reservations](#ec2-capacity-reservations)
+  - [Which purchasing option is right for me?](#which-purchasing-option-is-right-for-me)
+
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 ## EC2
